--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./favicon.ico" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="src/jquery.vide.js"></script>
-
 </head>
-<body data-vide-bg="video/ocean">
-
+<body>
     <!-- Header contains profile and a landscape picture and headings of introduction-->
     <header class="about_me bg_lightgrey">
         <!--main picture-->
-        <!--<img src="./images/main.jpg" id="home_gallery" alt="main picture">-->
-        <div id="block" style="width:100%; height: 720px; position:relative;z-index:0;" data-vide-bg="video/water" data-vide-options="position: 0% 50%"></div>
+        <img src="./images/main.jpg" id="home_gallery" alt="main picture">
 
         <div class="quote_container">
             <p class="quote text_align_center">"It is not the mountain we conquer but ourselves"</p>
