--- a/p1727500/index.html
+++ b/p1727500/index.html
@@ -78,7 +78,7 @@
             <a href="https://plus.google.com/u/0/105505888121349614278" target="_blank">
                 <img class="social_icon" src="./images/google-plus.png" alt="google plus">
             </a>
-            <a href="https://www.instagram.com/yongyusian/" target="_blank">
+            <a href="https://www.instagram.com/" target="_blank">
                 <img class="social_icon" src="./images/instagram.png" alt="instagram">
             </a>
             <a href="https://www.linkedin.com/in/yu-sian-yong-586358175/" target="_blank">
