--- a/p1727500/index.html
+++ b/p1727500/index.html
@@ -72,7 +72,7 @@
     <footer>
         <h2>Chat with me at the social medias below!</h2>
         <div>
-            <a href="https://www.facebook.com/ys112" target="_blank">
+            <a href="https://www.facebook.com/" target="_blank">
                 <img class="social_icon facebook" src="./images/facebook.png" alt="facebook">
             </a>
             <a href="https://plus.google.com/u/0/105505888121349614278" target="_blank">
